Memory: rename Memory to BasicMemory to free the name for new interface

--- a/src/gui/MainWindow.ui
+++ b/src/gui/MainWindow.ui
@@ -413,7 +413,7 @@
   </action>
   <action name="actionMemory">
    <property name="text">
-    <string>Memory</string>
+    <string>BasicMemory</string>
    </property>
    <property name="toolTip">
     <string>Data memory view</string>
