--- a/src/gui/samples.qrc
+++ b/src/gui/samples.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>samples/simple-lw-sw-ia.S</file>
+        <file>samples/demo.S</file>
     </qresource>
 </RCC>
